--- a/activity/templates/profile.html
+++ b/activity/templates/profile.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="hero-image">
+      <div class="hero-text">
+          <h1>{{user.username}}'s profile</h1>
+     </div>
+</div>
 <div class="container">
     <div class="panel">      
-        <div class="panel-heading">Add Categories</div>
+       <h3>Add Interests</h3>
         <div class="panel-body">
             <form type="get" action=".">
                 <select name="new_interest" class="form-control cats" onchange="this.form.submit()">
