--- a/activity/templates/profile.html
+++ b/activity/templates/profile.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="hero-image">
-      <div class="hero-text">
-          <h1>{{user.username}}'s profile</h1>
-     </div>
+<div class="jumbotron" style="background-image: linear-gradient(135deg, rgba(30, 33, 33, .82) 1%, rgba(32, 32, 32, .14) 98%), url('../static/images/profile.jpeg');">
+    <div class="jumbo-text .animated .fadeUpBig" style="color: white; text-align: center;">
+        <h1 class="display-4" style="background-color: none;">{{ user.username }}'s profile</h1>
+    </div>
 </div>
+
 <div class="container">
-    <div class="panel">      
+    <div class="panel profile-panel">      
        <h3>Add Interests</h3>
         <div class="panel-body">
             <form type="get" action=".">
@@ -24,7 +25,7 @@
             {% if user_interest_list %}
             <div class="button-area">
                 {% for int in user_interest_list %}
-                <button type="button" class="butt_{{int.activity_type}} btn btn-primary mx-1 removeInt" data-catid="{{int.activity_type}}">
+                <button type="button" class="butt_{{int.activity_type}} btn btn-primary mx-1 mb-2 removeInt" data-catid="{{int.activity_type}}">
                     <i class="far fa-trash-alt" style="color:white;"></i>
                     {{int.activity_type}}
                 </button>
