--- a/activity/templates/activity.html
+++ b/activity/templates/activity.html
@@ -1,13 +1,13 @@
 <div class="mb-3 ml-2 mr-2">
     <div class="card" style="width: 18rem; height: 350px;">
         <a data-target="#modal_{{ activity.ID }}" data-toggle="modal" href="#modal_{{ activity.ID }}">
-            {% if activity.pic_url %}
-            {% load static %}
-            <img class="card-img-top" src="static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
-            {% else %}
-            <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="286px"
-                height="197px">
-            {% endif %}
+        {% if activity.pic_url %}
+        {% load static %}
+        <img class="card-img-top" src="static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
+        {% else %}
+        <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="286px"
+            height="197px">
+        {% endif %}
         </a>
         <div class="card-body">
             {% if user.is_authenticated %}
@@ -37,7 +37,6 @@
     </div>
 </div>
 
-
 <div class="modal fade" id="modal_{{ activity.ID }}" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
@@ -64,13 +63,11 @@
                 <p class="card-text" style="margin-top: 8px;"><i class="fas fa-star"></i> Average Rating: {{ activity.avg_review }}</p>
                 <a href="https://maps.google.com/maps/search/{{ activity.name }}"><button type="button" class="btn btn-primary">Directions</button></a>
                 {% if activity.origin == 'y' %}
-                <button type="button" class="btn btn-primary" style="background-color:#d32323; border-color:#d32323;"><i class="fab fa-yelp"></i> Yelp</button>
+                <a href="{{ activity.url }}"><button type="button" class="btn btn-primary" style="background-color:#d32323; border-color:#d32323;"><i class="fab fa-yelp"></i> Yelp</button></a>
                 {% elif activity.origin == 't' %}
-                <button type="button" class="btn btn-primary" style="background-color: #0b47a8; border-color: #0b47a8;"><i class="fas fa-ticket-alt"></i> Ticketmaster</button>
+                <a href="{{ activity.url }}"><button type="button" class="btn btn-primary" style="background-color: #0b47a8; border-color: #0b47a8;"><i class="fas fa-ticket-alt"></i> Ticketmaster</button></a>
                 {% endif %}
             </div>
         </div>
     </div>
 </div>
-
-    
