--- a/activity/templates/activity_profile.html
+++ b/activity/templates/activity_profile.html
@@ -1,7 +1,6 @@
 <div class="mb-3 ml-2 mr-2">
     <div class="card" style="width: 18rem; height: 340px;">
-            <a data-target="#modal_{{ activity.ID }}" data-toggle="modal" href="#modal_{{ activity.ID }}">
-
+        <a data-target="#modal_{{ activity.ID }}" data-toggle="modal" href="#modal_{{ activity.ID }}">
         {% if activity.pic_url %}
         {% load static %}
         <img class="card-img-top" src="../static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
@@ -10,42 +9,40 @@
         {% endif %}
         <div class="card-body">
             <a class="removelike mark_{{ activity.ID }}" href="#" data-catid="{{ activity.ID }}" style="float: right;"
-                onclick="return false"><i class="fas fa-bookmark"></i></a>
-                <h5 class="card-title">{{activity.name}}</h5>
-                {% if activity.address1 %}
-                <a href="https://maps.google.com/maps/search/{{ activity.name }}"><h6 class="card-subtitle mb-2 text-muted"><i class="fas fa-location-arrow"></i> {{ activity.address1 }}</h6></a>
-                {% endif %}
-                {% if activity.display_phone %}
-                <a class="desktel" style="text-decoration: none;"><p class="card-text"><i class="fas fa-phone"></i> {{ activity.display_phone }}</p></a>
-                <a class="mobiletel" href="tel:{{ activity.phone_number }}"><p class="card-text"><i class="fas fa-phone"></i> {{ activity.display_phone }}</p></a>
-                {% endif %}
-                {% if activity.origin == 'y' %}
-                <p class="card-text"><a href="{{ activity.url }}"><i class="fab fa-yelp" style="color: #d32323;"></i> Visit on Yelp</a></p>
-                {% endif %}
-                {% if activity.origin == 't' %}
-                <p class="card-text"><a href="{{ activity.url }}"><i class="fas fa-ticket-alt" style="color: #0b47a8;"></i> Visit on Ticketmaster</a></p>
-                {% endif %}
+            onclick="return false"><i class="fas fa-bookmark"></i></a>
+            <h5 class="card-title">{{activity.name}}</h5>
+            {% if activity.address1 %}
+            <a href="https://maps.google.com/maps/search/{{ activity.name }}"><h6 class="card-subtitle mb-2 text-muted"><i class="fas fa-location-arrow"></i> {{ activity.address1 }}</h6></a>
+            {% endif %}
+            {% if activity.display_phone %}
+            <a class="desktel" style="text-decoration: none;"><p class="card-text"><i class="fas fa-phone"></i> {{ activity.display_phone }}</p></a>
+            <a class="mobiletel" href="tel:{{ activity.phone_number }}"><p class="card-text"><i class="fas fa-phone"></i> {{ activity.display_phone }}</p></a>
+            {% endif %}
+            {% if activity.origin == 'y' %}
+            <p class="card-text"><a href="{{ activity.url }}"><i class="fab fa-yelp" style="color: #d32323;"></i> Visit on Yelp</a></p>
+            {% endif %}
+            {% if activity.origin == 't' %}
+            <p class="card-text"><a href="{{ activity.url }}"><i class="fas fa-ticket-alt" style="color: #0b47a8;"></i> Visit on Ticketmaster</a></p>
+            {% endif %}
         </div>
     </div>
 </div>
 
 <div class="modal fade" id="modal_{{ activity.ID }}" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-dialog-centered">
-
-        <!--Modal content -->
         <div class="modal-content">
             <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
-                    {% if activity.pic_url %}
-                    {% load static %}
-                    <img class="card-img-top" src="../static/media/modal_{{ activity.pic_url }}" alt="Activity Pic" width="466px" height="197px">
-                    {% else %}
-                    <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="466px" height="197px">
-                    {% endif %}
+                {% if activity.pic_url %}
+                {% load static %}
+                <img class="card-img-top" src="../static/media/modal_{{ activity.pic_url }}" alt="Activity Pic" width="466px" height="197px">
+                {% else %}
+                <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="466px" height="197px">
+                {% endif %}
                 <h4 class="modal-title card-title">{{activity.name}}</h4>
                 {% if activity.address1 %}
                 <a href="https://maps.google.com/maps/search/{{ activity.name }}"><p class="card-subtitle mb-3 mt-2 text-muted"><i class="fas fa-location-arrow"></i> {{activity.address1}}</p></a>
@@ -57,9 +54,9 @@
                 <p class="card-text" style="margin-top: 8px;"><i class="fas fa-star"></i> Average Rating: {{ activity.avg_review }}</p>
                 <a href="https://maps.google.com/maps/search/{{ activity.name }}"><button type="button" class="btn btn-primary">Directions</button></a>
                 {% if activity.origin == 'y' %}
-                <button type="button" class="btn btn-primary" style="background-color:#d32323; border-color:#d32323;"><i class="fab fa-yelp"></i> Yelp</button>
+                <a href="{{ activity.url }}"><button type="button" class="btn btn-primary" style="background-color:#d32323; border-color:#d32323;"><i class="fab fa-yelp"></i> Yelp</button></a>
                 {% elif activity.origin == 't' %}
-                <button type="button" class="btn btn-primary" style="background-color: #0b47a8; border-color: #0b47a8;"><i class="fas fa-ticket-alt"></i> Ticketmaster</button>
+                <a href="{{ activity.url }}"><button type="button" class="btn btn-primary" style="background-color: #0b47a8; border-color: #0b47a8;"><i class="fas fa-ticket-alt"></i> Ticketmaster</button></a>
                 {% endif %}
             </div>
         </div>
