--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135783909-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-135783909-1');
+  </script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   {% block title %}<title>Docent</title>{% endblock %}
