--- a/activity/static/css/bs.css
+++ b/activity/static/css/bs.css
@@ -1,14 +1,3 @@
-  /* mobile fix */
-  @media (max-width: 768px) {
-    .dropdown-lr h3 {
-        color: #eee;
-    }
-
-    .dropdown-lr label {
-        color: #eee;
-    }
-}
-
 .jumbotron {
     position: relative;
     height: 300px;
@@ -103,6 +92,7 @@
     }
     .mobiletel {
         display: none;
+        visibility: hidden;
     }
 }
 
@@ -115,6 +105,7 @@
     }
     .mobiletel {
         display: none;
+        visibility: hidden;
     }
 }
 
@@ -127,6 +118,14 @@
     }
     .mobiletel {
         display: none;
+        visibility: hidden
+    }
+    .dropdown-lr h3 {
+        color: #eee;
+    }
+
+    .dropdown-lr label {
+        color: #eee;
     }
 }
 
@@ -139,6 +138,14 @@
     }
     .desktel {
         display: none;
+        visibility: hidden
+    }
+    .dropdown-lr h3 {
+        color: #eee;
+    }
+
+    .dropdown-lr label {
+        color: #eee;
     }
 }
 
@@ -151,6 +158,7 @@
     }
     .desktel {
         display: none;
+        visibility: hidden
     }
 }
 
@@ -163,6 +171,7 @@
     }
     .desktel {
         display: none;
+        visibility: hidden
     }
 }
 
