--- a/activity/templates/index.html
+++ b/activity/templates/index.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
+{% block search %}
+<form class="form-inline ml-auto mr-auto" type="get" action="." id="search">
+    <input class="form-control mr-sm-2" type="search" name="search_box" placeholder="Search" aria-label="Search">
+    <a id="search_submit" href="#" onclick="document.getElementById('search').submit();"><i class="fa fa-search"></i></a>
+</form>
+{% endblock %}
+
 {% block content %}
 <div class="jumbotron">
     <div class="jumbo-text .animated .fadeUpBig" style="color: white; text-align: center">
@@ -41,8 +48,25 @@
     <a id="other" class="nav-item nav-link category" href="{% url 'index'%}?category=other">Other</a>
     {% endif %}
 </nav>
-<br />
-
+<nav class="navbar navbar-expand-lg">    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{% url 'index'%}?sort=az">A-Z</a>
+                <a class="dropdown-item" href="{% url 'index'%}?sort=za">Z-A</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'index'%}?filter=yelp">Yelp</a>
+                    <a class="dropdown-item" href="{% url 'index'%}?sort=ticketmaster">Ticketmaster</a>
+                </div>
+            </li>
+        </div>
+      </nav>
 
 {% if activity_list %}
 <div class="container">
