--- a/activity/templates/index.html
+++ b/activity/templates/index.html
@@ -136,7 +136,7 @@
 
         <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
         {% if activity_list.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page={{ activity_list.previous_page_number }}">{{ activity_list.previous_page_number }}</a></li>
+        <li class="page-item"><a class="page-link" href="?{{ url_replace page=activity_list.previous_page_number }}">{{ activity_list.previous_page_number }}</a></li>
         {% endif %}
         <li class="page-item active"><a class="page-link" href="#">{{ activity_list.number }}</a></li>
         {% if activity_list.has_next %}
